--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,14 @@
+html {
+}
+
+body {
+}
+
+body,
+.table {
+    color: #fff;
+}
+
 body,
 .bg-dark {
     background-color: #111 !important;
@@ -12,12 +23,21 @@ body,
 
 #sidebar {
     width: 190px;
+    min-width: 190px;
     padding-top: 2px;
     background-color: #111;
 }
 
 #sidebar .navbar-item {
     font-size: 1.3em;
+}
+
+main {
+    height: calc(100vh - 67px);
+}
+
+.content {
+    width: 100%;
 }
 
 a:link,
@@ -74,11 +94,15 @@ ul.navbar-nav a:hover {
 }
 
 .navbar-brand > img {
-    height: 20px;
+    height: 25px;
 }
 
 .container-fluid {
-    padding: 0 10px !important;
+    padding: 0 8px !important;
+}
+
+#player {
+    overflow-x: hidden;
 }
 
 .player-btn {
@@ -114,12 +138,47 @@ ul.navbar-nav a:hover {
     height: 100px;
 }
 
-main {
-    height: calc(100vh - 67px);
+.action-col {
+    text-align: right;
+    width: 1%;
 }
 
-.content {
+.table {
     width: 100%;
+}
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#directories {
+    margin-top: 20px;
+}
+
+.dir-path {
+    line-height: 32px;
+    font-size: 1.1em;
+}
+
+.dir-path:hover {
+    background-color: #222;
+}
+
+.scan-progress {
+    background-color: #222;
+    margin-top: 10px;
+    margin-right: 8px;
+}
+
+.help-text {
+    padding: 6px;
+    font-size: 0.8em;
+    color: #999;
+}
+.directory-actions > button {
+    margin-right: 6px;
 }
 
 @media (max-width: 575.98px) {
@@ -127,7 +186,11 @@ main {
 
 @media (max-width: 767.98px) {
     #sidebar {
-        width: 80px;
+        width: 100px;
+        min-width: 100px;
+    }
+    .sidebar-icon {
+        margin-right: 0 !important;
     }
     .link-toggle {
         display: none;
@@ -135,6 +198,10 @@ main {
     #sidebar > ul.navbar-nav li.navbar-item span {
         font-size: 1.4em;
         padding: 8px 0;
+    }
+    .navbar-brand img {
+        padding-left: 8px;
+        height: 36px;
     }
     .navbar-brand span {
         display: none;
