--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,8 +37,11 @@ main {
 }
 
 .content {
-    width: 82%;
+    width: 100%;
+    padding: 0 10px;
     margin: 0 auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 a:link,
@@ -102,8 +105,25 @@ ul.navbar-nav a:hover {
     padding: 0 8px !important;
 }
 
+/**
+ * Player
+ */
 #player {
+    background-color: #222;
+    height: 100px;
+    width: 100%;
+    z-index: 999;
+    position: absolute;
+    bottom: 0;
     overflow-x: hidden;
+}
+
+#player-cont {
+    padding-top: 10px;
+}
+
+#player-cover-art {
+    height: 100px;
 }
 
 .player-btn {
@@ -117,26 +137,6 @@ ul.navbar-nav a:hover {
 
 #player-controls > button {
     margin-right: 20px;
-}
-
-/**
- * Player
- */
-#player {
-    background-color: #222;
-    height: 100px;
-    width: 100%;
-    z-index: 999;
-    position: absolute;
-    bottom: 0;
-}
-
-#player-cont {
-    padding-top: 10px;
-}
-
-#player-cover-art {
-    height: 100px;
 }
 
 .action-col {
