--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,25 @@ html {
 body {
 }
 
+/**
+ * Scrollbar
+ */
+::-webkit-scrollbar {
+    width: 13px;
+    height: 13px;
+}
+::-webkit-scrollbar-thumb {
+    background: #666;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #aaa;
+}
+::-webkit-scrollbar-track {
+    background: #111111;
+    border-radius: 10px;
+}
+
 body,
 .table {
     color: #fff;
@@ -197,6 +216,17 @@ ul.navbar-nav a:hover {
 }
 .search-row-cover {
     margin-right: 10px;
+}
+
+/**
+ * Loading
+ */
+.sweet-loading {
+    padding: 20px 0;
+}
+
+.sweet-loading > * {
+    margin: 0 auto;
 }
 
 @media (max-width: 575.98px) {
