--- a/public/css/main.css
+++ b/public/css/main.css
@@ -217,6 +217,9 @@ ul.navbar-nav a:hover {
 .search-row-cover {
     margin-right: 10px;
 }
+.grid-icon:hover {
+    cursor: pointer;
+}
 
 /**
  * Loading
