--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,7 +151,8 @@ ul.navbar-nav a:hover {
 }
 
 .player-btn {
-    font-size: 1.7em;
+    margin-top: 3px;
+    font-size: 1.3em;
     color: #888;
 }
 
@@ -160,7 +161,7 @@ ul.navbar-nav a:hover {
 }
 
 #player-controls > button {
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .action-col {
