--- a/public/css/main.css
+++ b/public/css/main.css
@@ -246,6 +246,27 @@ ul.navbar-nav a:hover {
 }
 
 /**
+ * Podcasts
+ */
+.podcast-cover {
+    width: 100px;
+    height: 100px;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.cursor {
+    color: #ccc;
+}
+
+.cursor:hover {
+    cursor: pointer;
+    color: #fff;
+}
+
+/**
  * Search
  */
 .resultRow {
