--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,17 +67,6 @@ body,
     padding-bottom: 100px;
 }
 
-#sidebar {
-    width: 190px;
-    min-width: 190px;
-    padding-top: 2px;
-    background-color: #111;
-}
-
-#sidebar .navbar-item {
-    font-size: 1.3em;
-}
-
 main {
     height: calc(100vh - 67px);
 }
@@ -320,24 +309,52 @@ ul.navbar-nav a:hover {
 .sweet-loading > * {
     margin: 0 auto;
 }
+
+/**
+ * Sidebar
+ */
+#sidebar {
+    width: 190px;
+    min-width: 190px;
+    padding-top: 2px;
+    padding-left: 20px;
+    background-color: #111;
+}
+
+#sidebar .navbar-item {
+    font-size: 1.3em;
+}
 #sidebar-playlist-cont {
-    height: 51vh;
+    height: 40vh;
     overflow-y: auto;
 }
+
+.playlist-name {
+    max-width: 100px;
+}
+
+/**
+ * Playlists
+ */
+#tbl-playlists tr:hover {
+    background-color: #222;
+}
+
 @media (max-width: 575.98px) {
 }
 
 @media (max-width: 767.98px) {
     #sidebar {
-        width: 50px;
-        min-width: 50px;
+        width: 75px;
+        min-width: 75px;
+        text-align: center;
     }
     .sidebar-icon {
         margin-right: 0 !important;
     }
     .navbar {
         margin: 0;
-        padding: 0 4px;
+        padding: 0 24px;
     }
     .grid-icon {
         height: 85px !important;
@@ -347,7 +364,7 @@ ul.navbar-nav a:hover {
         display: none;
     }
     #sidebar > ul.navbar-nav li.navbar-item span {
-        font-size: 1.4em;
+        /*font-size: 1.4em;*/
         padding: 8px 0;
     }
     .navbar-brand img {
