--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,7 +204,7 @@ ul.navbar-nav a:hover {
     width: 1%;
 }
 
-.progress {
+.progress-player {
     width: 100%;
     position: absolute;
     bottom: 100px;
@@ -306,13 +306,6 @@ ul.navbar-nav a:hover {
 .search-row-cover {
     margin-right: 10px;
 }
-.search-row-title {
-    font-size: 1.2em;
-    line-height: 40px;
-}
-.search-row-playtime-string {
-    line-height: 40px;
-}
 .dropright > .dropdown-toggle {
     color: #666;
 }
@@ -367,6 +360,10 @@ ul.navbar-nav a:hover {
     max-width: 100px;
 }
 
+.search-search-row-title,
+.search-search-row-playtime-string {
+    line-height: 40px;
+}
 /**
  * Playlists
  */
@@ -415,9 +412,8 @@ ul.navbar-nav a:hover {
     .search-row-cover {
         margin-right: 10px;
     }
-    .search-row-title,
-    .search-row-playtime-string {
-        font-size: 0.9em;
+    .search-search-row-title,
+    .search-search-row-playtime-string {
     }
     .resultRow {
         padding: 0;
