Implement save playlist

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -306,6 +306,9 @@ ul.navbar-nav a:hover {
 .search-row-cover {
     margin-right: 10px;
 }
+#search-actions > button {
+    margin-right: 10px;
+}
 .dropright > .dropdown-toggle {
     color: #666;
 }
