--- a/public/css/main.css
+++ b/public/css/main.css
@@ -353,6 +353,7 @@ ul.navbar-nav a:hover {
     padding-top: 2px;
     padding-left: 22px;
     background-color: #111;
+    overflow-y: hidden;
 }
 
 #sidebar .navbar-item {
