--- a/public/css/main.css
+++ b/public/css/main.css
@@ -286,7 +286,6 @@ ul.navbar-nav a:hover {
 }
 
 .podcast-cover {
-    width: 100px;
     height: 100px;
 }
 
@@ -411,9 +410,7 @@ ul.navbar-nav a:hover {
 }
 
 @media (max-width: 767.98px) {
-    .podcast-cover,
-    .podcast-play {
-        width: 50px;
+    .podcast-cover {
         height: 50px;
     }
     #sidebar {
